# OrderForgeMatchingEngine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  demo_run.cpp  main.cpp  readme.md
.github/workflows/: c-cpp.yml
OrderForge/: CMakeLists.txt  book_level.cpp  book_level.h  book_side.cpp  book_side.h  matching_engine.cpp  matching_engine.h  order_book.cpp  order_book.h  order_book_data.h  trade_producer.cpp  trade_producer.h
OrderForge/data_types/: CMakeLists.txt  enums.h  hashed_linked_list.h  id_generator.h  order.h  order_forge_types.h  pool_allocator.h  scaled_int.h  time_utils.h  trade.h  types.h
OrderForge/data_types/tests/: CMakeLists.txt  test_hashed_linked_list.cpp  test_id_generator.cpp  test_scaled_int.cpp
OrderForge/logger/: data_structs.h  defines.h  logger.h  logger_config.h  readme.md  ring_buffer.h
OrderForge/logger/tests/: CMakeLists.txt  test_logger.cpp  test_ring_buffer.cpp
OrderForge/tests/: CMakeLists.txt  test_book_level.cpp  test_book_side.cpp  test_matching_engine.cpp  test_order_book.cpp  test_trade_producer.cpp
applications/: CMakeLists.txt
applications/order_forge_app/: CMakeLists.txt  config.json  order_forge_app.cpp  order_forge_app.h  order_forge_app_config.h
applications/order_forge_matching_engine_benchmark/: CMakeLists.txt  benchmark.cpp  results.txt
applications/order_forge_matching_engine_demo/: CMakeLists.txt  demo_run.cpp
benchmarking/: CMakeLists.txt  benchmark.cpp  results.txt
config/: CMakeLists.txt  config_helpers.h
event_loop/: CMakeLists.txt  event_handler_base.h  event_handler_tcp.cpp  event_handler_tcp.h  event_loop.h  reactor.cpp  reactor.h  tcp_client_handler.cpp  tcp_client_handler.h  tcp_connection_handler.cpp  tcp_connection_handler.h  tcp_listener_config.h  tcp_reactor.cpp  tcp_reactor.h
event_loop/tests/: CMakeLists.txt  test_event_loop.cpp
exchange/: CMakeLists.txt  book_level.cpp  book_level.h  book_side.cpp  book_side.h  order_book.cpp  order_book.h  order_book_data.h  trade_producer.cpp  trade_producer.h
exchange/data_types/: CMakeLists.txt  enums.h  hashed-linked-list.h  hashed_linked_list.h  order.h  pool_allocator.h  price.h  quantity.h  scaled_int.h  trade.h
exchange/data_types/tests/: CMakeLists.txt  data_type_tests.cpp  test_hashed-linked-list.cpp  test_pool_allocator.cpp  test_price.cpp  test_quantity.cpp  test_scaled_int.cpp
exchange/logger/: CMakeLists.txt  data_structs.h  defines.h  logger.h  ring_buffer.h
exchange/logger/tests/: CMakeLists.txt  test_logger.cpp  test_ring_buffer.cpp
exchange/tests/: CMakeLists.txt  exchange_tests.cpp  test_book_level.cpp  test_book_side.cpp  test_order_book.cpp  test_trade_producer.cpp
general_benchmarking/: CMakeLists.txt
logger/: CMakeLists.txt  data_structs.h  defines.h  logger.h  logger_config.h  ring_buffer.h
logger/tests/: CMakeLists.txt  test_logger.cpp  test_ring_buffer.cpp
message_protocols/: CMakeLists.txt
message_protocols/json/: CMakeLists.txt  message_protocol_json.h  message_protocol_parse_json.h  message_protocol_write_json.h
message_protocols/json/tests/: CMakeLists.txt  test_message_protocol_json.cpp
message_protocols/protobuf/: CMakeLists.txt
order_forge/: CMakeLists.txt  book_level.h  book_side.h  matching_engine.cpp  matching_engine.h  order_book.cpp  order_book.h  order_book_config.h  order_book_data.h  price_level.cpp  price_level.h
order_forge/data_types/: chunked_allocator.h  enums.h  hashed_linked_list.h  id_generator.h  order.h  order_forge_types.h  pool_allocator.h  scaled_int.h  singleton_wrapper.h  trade.h  types.h
order_forge/data_types/tests/: CMakeLists.txt  test_chunked_allocator.cpp  test_hashed_linked_list.cpp  test_id_generator.cpp  test_pool_allocator.cpp
order_forge/tests/: CMakeLists.txt  test_book_side.cpp  test_order_book.cpp  test_price_level.cpp
order_forge_app/: CMakeLists.txt  config.json  main.cpp  order_forge_app.cpp  order_forge_app.h
python/app_testing/: main.py
